GNOME Bugzilla – Bug 660513
crash when icon not found
Last modified: 2011-10-17 12:58:37 UTC
** (lt-gnome-control-center:21060): WARNING **: Could not find icon Program received signal SIGSEGV, Segmentation fault. 0x00da05c8 in g_value_object_collect_value (value=0xbfffe58c, n_collect_values=1, collect_values=0xbfffe54c, collect_flags=0) at gobject.c:3073 3073 else if (!g_value_type_compatible (G_OBJECT_TYPE (object), G_VALUE_TYPE (value))) (gdb) where
+ Trace 228648
g-c-c git master as of today.
Created attachment 197805 [details] [review] shell: Don't crash when loading the icon fails
Ping? Ok to commit this?
Pushed to gnome-3-2 and master, thanks! Attachment 197805 [details] pushed as e1dbaef - shell: Don't crash when loading the icon fails