shell: Don't crash when loading the icon fails

https://bugzilla.gnome.org/show_bug.cgi?id=660513